# dolfinx-rans

./: .gitignore  LOG.md  README.md  install.sh  plan.md  plan_2026-02-12.md  pyproject.toml  run.sh  run_bfs.sh  run_channel.sh  run_re100k.sh
bfs/: bfs.json  bfs.jsonc
channel/: channel.json  channel.jsonc  config_used.json  run.file
examples/: bfs_quick.json  channel_nek_re125k_like.json  channel_re590.json  channel_re590_sst.json  channel_smoke.json
nek_re100k/: BF_poiseuille_RANS0.f00001  metadata.json  nek_profile_outer.csv  nek_profile_wall_units.csv  nek_reference_profile.csv  nek_to_csv.csv  nek_to_csv.json  nek_to_csv.npz  nek_to_csv.py  nek_to_csv_symmetry.csv
re100k/: run_config.json
re590/: config_used.json  history.csv  run_info.json
refs/joove-k-epsilon/: BackStepSimulation.py  ChannelSimulation.py  README.md  TurbulenceModel.py
refs/joove-k-epsilon/Configs/: ConfigBackStep.py  ConfigChannel.py
src/dolfinx_rans/: __init__.py  __main__.py  cli.py  config.py  geometry.py  plotting.py  rans_solver.py  solver.py  utils.py
src/dolfinx_rans/models/: __init__.py  base.py  kepsilon.py  sst.py  wilcox2006.py
src/dolfinx_rans/validation/: __init__.py  mkm_re180.py  mkm_re590.py  nek_poiseuille_profile.py
tests/: test_smoke.py
